[gd_scene load_steps=2 format=3 uid="uid://achievementpanel1"]

[ext_resource type="Script" path="res://ui/components/achievement_panel.gd" id="1"]

[node name="AchievementPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Content/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Achievements"

[node name="Count" type="Label" parent="Content/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "0 / 13"

[node name="CloseButton" type="Button" parent="Content/Header"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "âœ•"

[node name="HSeparator" type="HSeparator" parent="Content"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AchievementList" type="VBoxContainer" parent="Content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
